# TelemetryManagement

./: .gitignore  README.md  alembic.ini  docker-compose.yml  logger.py  pyproject.toml
alembic/: env.py
alembic/versions/: 18584ca03eed_initial.py
src/: router_initializer.py  settings.py
src/management/: models.py  router.py  schemas.py
src/management/controllers/: get_history_telemetry_values.py  get_last_telemetry_value.py  save_telemetry.py
src/management/repositories/: telemetry.py
